# benchmarks

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: fibonacci.ipynb  matmul.ipynb
fibonacci/: CMakeLists.txt  __init__.py  fibonacci.py
fibonacci/src/: bigint_utils.c  bigint_utils.h  fast_doubling.c  fibonacci.c  fibonacci.h  linear.c  matmul_2var.c  naive.c
matmul/: CMakeLists.txt  __init__.py  matmul.py
matmul/src/: naive.c
primes/: CMakeLists.txt  __init__.py  primes.py
primes/src/: trial_division_naive.c  trial_division_sqrt.c  trial_division_sqrt_odd.c
sorting/: CMakeLists.txt  __init__.py  sorting.py
sorting/src/: bubble_sort_naive.cpp
utils/: __init__.py  fibonacci_benchmarks.py
